# resume-by-jd

./: .gitattributes  .gitignore  README.md  profile.yaml  pyproject.toml  requirements.txt  vercel.json
api/: [...path].py  index.py
frontend/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/features/editor/components/: EditResumeModal.tsx
frontend/src/features/editor/types/: formTypes.ts
frontend/src/features/generator/: api.ts  useResumeSession.ts
frontend/src/features/generator/components/: GeneratorForm.tsx  ResumePreview.tsx
frontend/src/features/shared/: types.ts  usePdfUrl.ts
frontend/src/lib/: pdf.ts
frontend/src/theme/: ThemeSettingsMenu.tsx  ThemeSettingsProvider.tsx  index.ts
frontend/static/: app.js  styles.css
samples/: Prompts copy.md  Prompts.md  jd.txt  khajamastan_profile.yml  profile.yml
samples/Ammu/: profile.yaml
samples/Khaja/: profile.yaml
src/resume_builder/: __init__.py  api.py  cli.py  hackajob_renderer.py  io_utils.py  jd_analyzer.py  latex_renderer.py  models.py  pdf_generator.py  profile_generator.py  reference_parser.py  resume_text_parser.py  resume_updater.py
tests/: test_api_theme_payload.py  test_ats_pdf_renderer.py  test_hackajob_renderer.py  test_io_utils.py  test_jd_analyzer.py  test_latex_renderer.py  test_profile_generator.py  test_resume_text_parser.py  test_resume_updater.py
